trunk/Archive2/66/a46d19acf25a00/output
main.cpp:1:0: error: unterminated #ifndef
 #ifndef TEST_H
 ^
